--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindplus/elements": "^1.0.15",
+    "flowbite": "^3.1.2",
     "gsap": "^3.13.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
