--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.14",
     "@tailwindplus/elements": "^1.0.15",
+    "daisyui": "^5.3.2",
     "flowbite": "^3.1.2",
     "gsap": "^3.13.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^4.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
